
syntax = "proto3";

import "title_define.proto";

option cc_enable_arenas = true;

package yuanda;

/*****************************************************
* 交易类型
*****************************************************/
// *new* 
enum TradeType{
	AUCTION = 0;		// 竞价交易 auction trading
	FIXED_PRICE = 1;	// 盘后固定价格交易 (属于大宗交易) block trading
}

/*****************************************************
* 数据类型
*****************************************************/
enum DataCatalog{
	/// 快照
	QUOTE = 0;

	/// 分时
	MINCHART = 1;

	/// K线
	CANDLESTICK = 2;

	/// 分笔
	TICKS = 3;

	/// 价量
	PRIVOL = 4;

	/// 排序
	SORT = 5;
}


/*****************************************************
* 快照
*****************************************************/
// 竞价交易状态
enum Security_Status{
	/// 无效状态
	INVALID = 0;

	/// 启动（开市前）时段	SH:'S'; SZ:S0
	START = 1;

	/// 开盘集合竞价.	SH:'C'; SZ:O0
	OPENING_CALL_AUCTION = 2;

	/// 开盘集合竞价阶段结束到连续竞价阶段开始之前的时段 SH:D; SZ:N/A
	BEFORE_TRADING = 3;

	/// 连续竞价	SH:'T'; SZ:T0
	TRADING = 4;

	/// 收盘集合竞价 SH:N/A; SZ:C0
	CLOSING_CALL_AUCTION = 5;

	/// 休市 	SH:'B'; SZ:B0
	BREAK = 6;

	/// 已闭市	SH:E; SZ:E0
	END = 7;

	/// 产品停牌  SH:P; SZ:?1
	PAUSE = 8;

	/// 临时停牌  SH:M/N; SZ:H0/V0(volatility)
	HALT = 9;

	/// 盘后交易 SH:N/A; SZ:A0
	AFTER_MAKET = 10;
} 

// *new* 固定价格交易状态
enum FP_Security_Status{
	/// 无效状态
	FP_INVALID = 0;

	/// 启动（开市前）时段	
	FP_START = 21;

	/// 开盘集合竞价.	
	FP_OPENING_CALL_AUCTION = 22;

	/// 连续竞价	
	FP_TRADING = 23;

	/// 已闭市	SH:E; SZ:E0
	FP_END = 24;

	/// 产品停牌  SH:P; SZ:?1
	FP_PAUSE = 25;
}

// 股票快照
message Quote {

  	int64 	Time 	= 1;					// 成交时间 
	string	Label 	= 2;                  	// 市场前缀+合约代码;以'\0'结尾，市场前缀两字节
	Security_Status   Status	= 3;		// 交易状态

	double  PreClose = 4;                   // 昨收价
	int64 	Volume 	= 5;					// 当日总成交量
	double  Amount	= 6;					// 当日总成交额

	double  Open 	= 7;					// 今开价
	double  High 	= 8;					// 最高价
	double  Low 	= 9;					// 最低价
	double  Price 	= 10;					// 最新价

	double  BuyPrice1 	= 11;				// 申买价1;2;3;4;5
	double  BuyPrice2 	= 12;	
	double  BuyPrice3 	= 13;	
	double  BuyPrice4 	= 14;	
	double  BuyPrice5 	= 15;	

	int64 	BuyVolume1 	= 16;				// 申买量1;2;3;4;5
	int64 	BuyVolume2 	= 17;
	int64 	BuyVolume3 	= 18;
	int64 	BuyVolume4 	= 19;
	int64 	BuyVolume5 	= 20;

	double  SellPrice1 	= 21;				// 申卖价1;2;3;4;5
	double  SellPrice2 	= 22;
	double  SellPrice3 	= 23;
	double  SellPrice4 	= 24;
	double  SellPrice5 	= 25;

	int64 	SellVolume1 = 26;				// 申卖量1;2;3;4;5
	int64 	SellVolume2 = 27;
	int64 	SellVolume3 = 28;
	int64 	SellVolume4 = 29;
	int64 	SellVolume5 = 30;

	int64 	BuyOrderNum1 = 31;				// 申买笔数1;2;3;4;5(深交所特有)
	int64 	BuyOrderNum2 = 32;
	int64 	BuyOrderNum3 = 33;
	int64 	BuyOrderNum4 = 34;
	int64 	BuyOrderNum5 = 35;

	int64 	SellOrderNum1 = 36;				// 申卖笔数1;2;3;4;5(深交所特有)
	int64 	SellOrderNum2 = 37;
	int64 	SellOrderNum3 = 38;
	int64 	SellOrderNum4 = 39;
	int64 	SellOrderNum5 = 40;

	int64 	TradeNumber		= 41;			// 交易总笔数(深交所特有)

	double  PreCloseIOPV 	= 42;			// 基金T-1日净值
	double  IOPV 			= 43;			// 基金实时参考净值

	TradeType	trade_type  = 100;			// *new* 交易类型
}

message MultiQuote{
	repeated Quote Entities = 1;	
}

message EmptyMessage{
}


/// Mini版的报价，用于与客户端的通讯
message MiniQuote {

	string	Label 			= 1;           	// 市场前缀+合约代码;以'\0'结尾，市场前缀两字节
	string	Name			= 2;			// 股票名称
	Security_Status   Status	= 3;		// 交易状态

	double  PreClose 		= 4;            // 昨收价
	int64 	Volume 			= 5;			// 当日总成交量
	double  Amount			= 6;			// 当日总成交额

	double  Open 			= 7;			// 今开价
	double  High 			= 8;			// 最高价
	double  Low 			= 9;			// 最低价
	double  Price 			= 10;			// 最新价

	int64 	LastVolume 		= 11;			//现手
	int64	InVolume 		= 12;			//内盘
	int64	OutVolume 		= 13;			//外盘

	double  Increase 		= 14;			//涨跌
	double  IncreaseRatio 	= 15;			//涨跌幅%
	double	Average 		= 16;			//均价
	double	Amplitude 		= 17;			//振幅
	double	IncreaseSpeed 	= 18;			//涨速%
	double	Upper 			= 19;			//涨停
	double	Lower 			= 20;			//跌停
	double	EntrustRatio 	= 21;			//委比%

	double	VolumeRatio 	= 22;			//量比
	double	IncreaseRatio3Day = 23;			//3日涨幅
	double	IncreaseRatio5Day = 24;			//5日涨幅

	int32	RiseCount 		= 25;			//上涨家数
	int32	FallCount 		= 26;			//下跌家数

	double	ExchangeRatio 	= 27;			//换手%

	double	PERatio 		= 28;			//市盈率 Price earnings ratio,即P/E ratio
	double	PBRatio 		= 29;			//市净率 PB,price to book value
	double	CirculateMarketValue = 30;		//流通市值
	double	TotalMarketValue = 31;			//总市值

	double 	NetCapital 		= 32;			//资金净额
	string	Leader 			= 33;			//领涨股

	int32	EntrustDiff		= 34;			//委差
}

/// Mini版的报价的集合
message MultiMiniQuote {
	repeated MiniQuote Entities  = 1;
}

/// 全量版的快照，用于单品种的推送
message FullQuote {
  	int64 	Time 	= 1;					// 成交时间 
	string	Label 	= 2;                  	// 市场前缀+合约代码;以'\0'结尾，市场前缀两字节
	string	Name	= 3;			        // 股票名称
	Security_Status   Status	= 4;		// 交易状态

	double  PreClose = 5;                   // 昨收价
	int64 	Volume 	= 6;					// 当日总成交量
	double  Amount	= 7;					// 当日总成交额

	double  Open 	= 8;					// 今开价
	double  High 	= 9;					// 最高价
	double  Low 	= 10;					// 最低价
	double  Price 	= 11;					// 最新价

	double  BuyPrice1 	= 12;				// 申买价1;2;3;4;5
	double  BuyPrice2 	= 13;	
	double  BuyPrice3 	= 14;	
	double  BuyPrice4 	= 15;	
	double  BuyPrice5 	= 16;	

	int64 	BuyVolume1 	= 17;				// 申买量1;2;3;4;5
	int64 	BuyVolume2 	= 18;
	int64 	BuyVolume3 	= 19;
	int64 	BuyVolume4 	= 20;
	int64 	BuyVolume5 	= 21;

	double  SellPrice1 	= 22;				// 申卖价1;2;3;4;5
	double  SellPrice2 	= 23;
	double  SellPrice3 	= 24;
	double  SellPrice4 	= 25;
	double  SellPrice5 	= 26;

	int64 	SellVolume1 = 27;				// 申卖量1;2;3;4;5
	int64 	SellVolume2 = 28;
	int64 	SellVolume3 = 29;
	int64 	SellVolume4 = 30;
	int64 	SellVolume5 = 31;

	int64 	BuyOrderNum1 = 32;				// 申买笔数1;2;3;4;5(深交所特有)
	int64 	BuyOrderNum2 = 33;
	int64 	BuyOrderNum3 = 34;
	int64 	BuyOrderNum4 = 35;
	int64 	BuyOrderNum5 = 36;

	int64 	SellOrderNum1 = 37;				// 申卖笔数1;2;3;4;5(深交所特有)
	int64 	SellOrderNum2 = 38;
	int64 	SellOrderNum3 = 39;
	int64 	SellOrderNum4 = 40;
	int64 	SellOrderNum5 = 41;

	int64 	TradeNumber		= 42;			// 交易总笔数(深交所特有)

	double  PreCloseIOPV 	= 43;			// 基金T-1日净值
	double  IOPV 			= 44;			// 基金实时参考净值	

	
	
	int64 	LastVolume 		= 45;			//现手
	int64	InVolume 		= 46;			//内盘
	int64	OutVolume 		= 47;			//外盘

	double  Increase 		= 48;			//涨跌
	double  IncreaseRatio 	= 49;			//涨跌幅%
	double	Average 		= 50;			//均价
	double	Amplitude 		= 51;			//振幅
	double	IncreaseSpeed 	= 52;			//涨速%
	double	Upper 			= 53;			//涨停
	double	Lower 			= 54;			//跌停
	double	EntrustRatio 	= 55;			//委比%

	double	VolumeRatio 	= 56;			//量比
	double	IncreaseRatio3Day = 57;			//3日涨幅
	double	IncreaseRatio5Day = 58;			//5日涨幅

	int32	RiseCount 		= 59;			//上涨家数
	int32	FallCount 		= 60;			//下跌家数

	double	ExchangeRatio 	= 61;			//换手%

	double	PERatio 		= 62;			//市盈率 Price earnings ratio,即P/E ratio
	double	PBRatio 		= 63;			//市净率 PB,price to book value
	double	CirculateMarketValue = 64;		//流通市值
	double	TotalMarketValue = 65;			//总市值

	double 	NetCapital 		= 66;			//资金净额
	string	Leader 			= 67;			//领涨股

	int32	EntrustDiff		= 68;			//委差
	double  IncrRatio1Min 	= 69;			//1分钟涨跌幅%
	double  IncrRatio5Min 	= 70;			//5分钟涨跌幅%
	double  IncrRatio15Min 	= 71;			//15分钟涨跌幅%
	double  IncrRatio30Min 	= 72;			//30分钟涨跌幅%

	FP_Security_Status FP_Status = 256; 	// *new* 盘后固定价格交易状态
	int64 	FP_Time 		= 257;			// *new* 盘后固定价格成交时间 
	int64 	FP_Volume 		= 258;			// *new* 盘后固定价格总成交量
	double  FP_Amount		= 259;			// *new* 盘后固定价格总成交额
	int64 	FP_BuyVolume  	= 260;			// *new* 未成交买入申报量
	int64 	FP_SellVolume 	= 261;			// *new* 未成交卖出申报量
}

/// 全量版的快照，用于单品种的推送
message MultiFullQuote{
	repeated FullQuote Entities  = 1;
}

/*****************************************************
* K线
*****************************************************/
// 归档周期
enum PeriodT {
	_1Min 	= 0;		// 1分钟
	_5Min 	= 1;      	// 5分钟
	_15Min 	= 2;      	// 15分钟
	_30Min 	= 3;       	// 30分钟
	_60Min 	= 4;      	// 60分钟
	_Day 	= 5;    	// 日
	_Week 	= 6;     	// 周
	_Month 	= 7;		// 月
	_Season = 8;		// 季
	_HalfYear = 9;		// 半年
	_Year 	= 10;		// 年
}

// 除复权
enum SplitT{
	NONE	= 0;		//不复权
	FORMER 	= 1;		//前复权
	LATTER	= 2;		//后复权
}

// K线
message CandleStick{
	string	Label 		= 1; 		//股票代码
	PeriodT Period 		= 2;		//周期
	SplitT	Split 		= 3;		//除复权
	repeated CandleStickEntity Entities = 4; //k线数据
}

// K线数据
message CandleStickEntity
{
	int64 	Time 	= 1; 			//时间
    double 	Open 	= 2; 			//开盘价
    double 	High 	= 3; 			//最高价
    double 	Low 	= 4; 			//最低价
    double 	Close 	= 5; 			//收盘价
    int64 	Volume 	= 6; 			//成交量
    double 	Amount 	= 7; 			//成交额

    int64	FP_Volume = 8;			// *new* 固定价格成交量
    double 	FP_Amount = 9;			// *new* 固定价格成交额
}

// 多品种K线数据
message MultiCandleSticks{
	repeated CandleStick Entities  = 1;
}
/*****************************************************
* 分时
*****************************************************/
// 分时
message MinChart
{
	string	Label 		= 1; 		//股票代码
	int64 	Time 		= 2;		//时间-日期
	double 	LastClose 	= 3;		//昨收
	repeated MinChartEntity Entities = 4;	//分时数据
}

// 分时数据体
message MinChartEntity 
{
	int64 	Time 	= 1; 		//时间-分钟
    double 	Price 	= 2; 		//成交价
    int64 	Volume 	= 3; 		//成交量
    double 	Amount 	= 4; 		//成交额
    double 	MeanPrice = 5; 		//均价
    double	LingXian = 6;		//领先指数（指数专有）
    double 	HongLu	= 7;		//红绿柱（指数专有）
    TradeType	trade_type  = 8;	// *new* 交易类型
}

// 多日分时数据
message MultiMin{
	repeated MinChart Data = 1;
}


/*****************************************************
* 分笔
*****************************************************/
//分笔数据
message Ticks{
	string	Label 	= 1;  				//股票代码
	int64 	Volume 	= 2; 				//成交量
    double 	Amount 	= 3; 				//成交额
	repeated TickEntity Entities = 4;	//分笔数据
	int64 	TradeNumber = 5;			//交易总笔数
	int64	Time 	= 6;				//时间-日期
	double 	LastClose 	= 7;			//昨收

	int64 	FP_Volume 	= 8; 			// *new* 固定价格成交总量
    double 	FP_Amount 	= 9; 			// *new* 固定价格成交总额
    int64 	FP_TradeNumber = 10;		// *new* 固定价格成交总笔数
}

enum TradDirectionT{
	Sell 	= 0;			//卖盘
	Buy 	= 1;			//买盘
	Unknown = 2;			//未知方向
}

//分笔成交（成交笔数无法提供）
message TickEntity	 
{
	int64 Time 		= 1; 				//时间
    double Price 	= 2; 				//成交价
    TradDirectionT Dir = 3;     		//买卖方向1:买入;0:卖出
    int64 CurVolume = 4; 				//单次成交量
    double CurAmount = 5;    			//单次成交额
    int64 CurTradeNumber = 6;			//单次成交笔数

    TradeType	trade_type  = 7;		// *new* 交易类型
}

// 多品种分笔数据
message MultiTicks{
	repeated Ticks Entities = 1;
}

/*****************************************************
* 排序
*****************************************************/
// 排序结果
message SortResult
{
	repeated SortEntity Entities = 1;
}

// 排序记录
message SortEntity
{
	string	Label 	= 1;			//股票代码  
	double	Value	= 2;			//排序数值
}

message FullSortResponse{
	string BlockId = 1;				// 板块ID
	TitleId Title = 2;				// 抬头ID
	bool Desc = 3;					// 排序方式, 可选项包括:false(升序),true(降序)
	int32 ValidCount = 4;			// 排序中，有效的数据个数
	repeated SortEntity Data = 5;				
}

message MultiSort{
	repeated FullSortResponse Entities = 1;
}

/*****************************************************
* 价量统计
*****************************************************/
// 价量
message PriceVolume
{
	string	Label 		= 1; 		//股票代码
	int64 	Time 		= 2;		//时间-日期
	int64 	TotalVolume = 3;		//总成交量
	repeated PriceVolumeEntity Entities = 4;	//价量数据
	double 	LastClose 	= 5;		//昨收
}

// 分时数据体
message PriceVolumeEntity 
{
    double 	Price 			= 1; 		//成交价

    int64 	BuyVolume 		= 2; 		//买成交量
    int64 	SellVolume 		= 3; 		//卖成交量
    int64	UnknownVolume 	= 4;		//不明成交量

    int64	BuyOrderNum 	= 5;		//买入笔数
    int64	SellOrderNum 	= 6;		//卖出笔数
    int64	UnknownOrderNum = 7;		//不明笔数
}

// 多品种的价量统计
message MultiPriVol
{
	repeated PriceVolume Entities = 1;	//
}
